--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -916,6 +916,9 @@ device memory, and overloading existing operations so that operations on these
 matrices triggers execution of suitable GPU kernels.
 
 
+\section{Discussion}
+
+
 \endinput
 
 MMTC: Chapter 2 (Background): Don't bother introducing Haskell and things like
