--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -2839,9 +2839,7 @@ concurrentTest
 
 \subsection{Conclusion}
 
-\section{Discussion}
-
-\subsection{Related Work}
+\section{Related Work}
 \marginnote{perhaps split differently: real vs. embedded languages?}
 
 Other significant parallel or GPGPU programming models and languages.
@@ -2860,6 +2858,9 @@ Limitations that we share/avoid. Where we differ
 \item NOVA \cite{Collins:2013wn} (lisp)
 \item Dandelion \cite{tk} (LINQ)
 \end{itemize}
+
+
+\section{Discussion}
 
 
 
