--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1351,8 +1351,8 @@ matrix formats.
 % our previous result will be investigated. Nevertheless,
 
 \section{Discussion}
-\subsection{Related Work}
-\subsection{Future Work}
+% \subsection{Related Work}
+% \subsection{Future Work}
 
 % \begin{itemize}
 %     \item performance \& analysis
