--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -868,7 +868,7 @@ In contrast to our current work, it already targets multiple architectures,
 namely GPUs, FPGAs, and multicore CPUs. However, the code generated for GPUs
 uses the DirectX 9 API, which does not provide access to several modern GPU
 features, negatively impacting performance and preventing some operations such
-as scatted writes (in Accelerate, the forward @permute@ operation).
+as scatted writes.
 
 RapidMind~\cite{LinXu:2008ig}, which targets the GPU using OpenCL, and its
 predecessor Sh~\cite{McCool:2004,McCool:2004un} which used pixel shaders of the
