get rid of some index macros

--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -64,7 +64,7 @@ processors~\cite{NVIDIA:2012wf}.
 
 General-purpose computing on graphics processing units
 (\indext{GPGPU}\index{GPGPU|see {general-purpose computing on graphics
-processing units}}) is the utilisation of a graphics processing unit (\GPU),
+processing units}}) is the utilisation of a graphics processing unit (GPU),
 which typically handles the computations for computer graphics, to perform
 computations in applications typically handled by the central processing unit
 (CPU). Since general purpose CPUs are designed to optimise the performance of a
@@ -104,11 +104,11 @@ and these applications can be coded to execute on the GPU.
 \subsection{CUDA}
 \label{sec:cuda}
 
-\CUDA is the parallel computing platform and programming model created by
-NVIDIA, which gives programmers direct access to the memory and parallel
-computation units of their GPUs. Using CUDA, the massively parallel multicore
-architecture of the GPU becomes accessible for general purpose computing, not
-just graphics.
+CUDA\index{CUDA} is the parallel computing platform and programming model
+created by NVIDIA, which gives programmers direct access to the memory and
+parallel computation units of their GPUs. Using CUDA, the massively parallel
+multicore architecture of the GPU becomes accessible for general purpose
+computing, not just graphics.
 
 CUDA extends the C programming language by allowing the C programmer to define
 functions, called \emph{kernels}\index{GPU!kernel}, that, when called, are
